feat(backend): add POST, PUT and DELETE for /categories
Refs: #53
